fixed footer position on tablet view

--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -46,7 +46,7 @@
     width: 50%;
     font-size: 32px;
   }
-  @media (min-width: 1200px){
+  @media (min-width: 1024px){
     .main{
       border: 1px solid rgba(28,231,131, 1);
       height: 100%;
